# ComfyUI-Image-Effects

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
core/: channel_mixer_node.py  color_balance_node.py  curves_node.py  levels_node.py  saver_plus_node.py  shadow_highlight_node.py  vibrance_node.py
creative/: __init__.py  ascii_art_node.py  ascii_text_node.py  css_filters_node.py  kaleidoscope_node.py
deformation/: __init__.py  barrel_distortion_node.py  fisheye_node.py  pinch_node.py  ripple_node.py  spherize_node.py
geometric/: __init__.py  crystallize_node.py  hexagonal_pixelate_node.py  polygon_node.py  triangulate_node.py  voronoi_node.py
light_effects/: __init__.py  aurora_node.py  god_rays_node.py  holographic_node.py  lens_flare_node.py  neon_glow_node.py
vintage/: __init__.py  film_grain_node.py  light_leaks_node.py  polaroid_node.py  vhs_glitch_node.py  vintage_tv_node.py
web/css/: css_filters.css
web/js/: css_filters.js
